--- a/package.json
+++ b/package.json
@@ -32,14 +32,16 @@
     "@remix-run/node": "^2.16.3",
     "@remix-run/react": "^2.15.0",
     "@remix-run/serve": "^2.15.0",
-    "@shopify/app-bridge-react": "^4.1.6",
+    "@shopify/app-bridge-react": "^4.1.10",
     "@shopify/polaris": "^12.0.0",
-    "@shopify/shopify-app-remix": "^3.7.0",
+    "@shopify/shopify-app-remix": "^3.8.3",
     "@shopify/shopify-app-session-storage-prisma": "^6.0.0",
     "isbot": "^5.1.0",
     "prisma": "^6.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "shopify": "^3.80.7",
+    "shopify-cli": "^1.0.11",
     "styled-components": "^6.1.17",
     "vite-tsconfig-paths": "^5.0.1"
   },
