--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "node": "^18.20 || ^20.10 || >=21.0.0"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.1",
-    "@mui/material": "^7.0.1",
+    "@mui/material": "^7.1.1",
     "@prisma/client": "^6.2.1",
     "@remix-run/dev": "^2.15.0",
     "@remix-run/fs-routes": "^2.15.0",
@@ -33,7 +34,8 @@
     "@remix-run/react": "^2.15.0",
     "@remix-run/serve": "^2.15.0",
     "@shopify/app-bridge-react": "^4.1.10",
-    "@shopify/polaris": "^12.0.0",
+    "@shopify/polaris": "^12.27.0",
+    "@shopify/polaris-icons": "^9.3.1",
     "@shopify/shopify-app-remix": "^3.8.3",
     "@shopify/shopify-app-session-storage-prisma": "^6.0.0",
     "isbot": "^5.1.0",
@@ -57,7 +59,8 @@
     "eslint-config-prettier": "^10.0.1",
     "prettier": "^3.2.4",
     "typescript": "^5.2.2",
-    "vite": "^5.1.3"
+    "vite": "^5.1.3",
+    "vite-plugin-svgr": "^4.3.0"
   },
   "workspaces": [
     "extensions/*"
