--- a/shopify.app.toml
+++ b/shopify.app.toml
@@ -1,7 +1,7 @@
 # Learn more about configuring your app at https://shopify.dev/docs/apps/tools/cli/configuration
 
 client_id = "d14b3ccbd93e47e46e5e9e86b32467e7"
-application_url = "https://conf-oman-hiv-press.trycloudflare.com"
+application_url = "https://periodic-designed-aerial-lender.trycloudflare.com"
 embedded = true
 name = "WorkOrder"
 handle = "workorder"
@@ -27,9 +27,9 @@ scopes = "write_products"
 
 [auth]
 redirect_urls = [
-  "https://conf-oman-hiv-press.trycloudflare.com/auth/callback",
-  "https://conf-oman-hiv-press.trycloudflare.com/auth/shopify/callback",
-  "https://conf-oman-hiv-press.trycloudflare.com/api/auth/callback"
+  "https://periodic-designed-aerial-lender.trycloudflare.com/auth/callback",
+  "https://periodic-designed-aerial-lender.trycloudflare.com/auth/shopify/callback",
+  "https://periodic-designed-aerial-lender.trycloudflare.com/api/auth/callback"
 ]
 
 [pos]
